--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Jingsong
 middle_name: Jason
 last_name: Liang
-email: jsliang@nus.edu.sg
+email: jingsong002@e.ntu.edu.sg
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 # footer_text: >
@@ -15,7 +15,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 #   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: ♉️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://JingsongLiang.github.io
 baseurl:
@@ -303,7 +303,6 @@ filtered_bibtex_keywords:
   [
     abbr,
     abstract,
-    additional_info,
     altmetric,
     annotation,
     arxiv,
@@ -323,6 +322,7 @@ filtered_bibtex_keywords:
     supp,
     video,
     website,
+    additional_info,
   ]
 
 # Maximum number of authors to be shown for each publication (more authors are visible on click)
